<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jlobato.gpro</groupId>
  <artifactId>gprdata</artifactId>
  <packaging>war</packaging>
  <version>1.4.6.2.RELEASE</version>
  <name>GPRO Data Webapp</name>
  <url>http://gprodata.yisasthemanuel.org</url>
  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
    </dependency>
    <!-- Jakarta Servlet API -->
    <dependency>
        <groupId>jakarta.servlet</groupId>
        <artifactId>jakarta.servlet-api</artifactId>
        <version>5.0.0</version> <!-- Ajusta la versión según tu necesidad -->
        <scope>provided</scope>
    </dependency>
<!--    <dependency>-->
<!--    	<groupId>javax.servlet</groupId>-->
<!--    	<artifactId>servlet-api</artifactId>-->
<!--    	<version>2.4</version>-->
<!--    	<scope>provided</scope>-->
<!--    </dependency>-->
<!--	  JSTL dependencies -->
<!--    <dependency>-->
<!--		<groupId>javax.servlet</groupId>-->
<!--		<artifactId>jstl</artifactId>-->
<!--		<version>1.2</version>-->
<!--	</dependency>-->
<!--	  Standard tags dependencies -->
<!--	<dependency>-->
<!--	    <groupId>taglibs</groupId>-->
<!--	    <artifactId>standard</artifactId>-->
<!--	    <version>1.1.2</version>-->
<!--	</dependency>	-->
    <dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-context</artifactId>
  		<version>${org.springframework.version}</version>
	</dependency>
    <dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-context-support</artifactId>
  		<version>${org.springframework.version}</version>
	</dependency>
	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-web</artifactId>
  		<version>${org.springframework.web.version}</version>
	</dependency>
	<dependency>
  		<groupId>org.springframework</groupId>
  		<artifactId>spring-webmvc</artifactId>
  		<version>${org.springframework.version}</version>
	</dependency>
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-log4j12</artifactId>
		<version>${slf4j.version}</version>
	</dependency>
	<dependency>
		<groupId>org.apache.logging.log4j</groupId>
		<artifactId>log4j-core</artifactId>
		<version>${log4j.version}</version>
		<scope>runtime</scope>
		<exclusions>
            <exclusion>
                <groupId>com.sun.jmx</groupId>
                <artifactId>jmxri</artifactId>
            </exclusion>
            <exclusion>
                <groupId>com.sun.jdmk</groupId>
                <artifactId>jmxtools</artifactId>
            </exclusion>
            <exclusion>
                <groupId>javax.jms</groupId>
                <artifactId>jms</artifactId>
            </exclusion>
        </exclusions>
	</dependency>
	
	<!-- spring security -->
 	<dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-web</artifactId>
      <version>${org.springframework.security.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
      <version>${org.springframework.security.version}</version>
    </dependency>
	<dependency>
	  <groupId>org.springframework.security</groupId>
	  <artifactId>spring-security-taglibs</artifactId>
	  <version>${org.springframework.security.version}</version>
	</dependency>
 	<!-- spring security -->
	
	<!--Binding for commons logging over slf4j -->
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>jcl-over-slf4j</artifactId>
		<version>${slf4j.version}</version>
		<scope>runtime</scope>
	</dependency>
    
	<!--c3p0 0.9.1.2 connection pool -->
	<dependency>
		<groupId>com.mchange</groupId>
    	<artifactId>c3p0</artifactId>
    	<version>0.9.5.4</version>
	</dependency>
	<!--AspectJ -->
	<dependency>
		<groupId>org.aspectj</groupId>
		<artifactId>aspectjweaver</artifactId>
		<version>1.7.4</version>
	</dependency>
	<!--Sitemesh -->
	<dependency>
		<groupId>opensymphony</groupId>
		<artifactId>sitemesh</artifactId>
		<version>2.4.2</version>
	</dependency>
	<dependency>
		<groupId>cglib</groupId>
		<artifactId>cglib</artifactId>
		<version>2.2.2</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
	<dependency>
	    <groupId>org.freemarker</groupId>
	    <artifactId>freemarker</artifactId>
	    <version>2.3.23</version>
	</dependency>
	
	<!-- ICALC4J -->
	<!-- https://mvnrepository.com/artifact/org.mnode.ical4j/ical4j -->
	<dependency>
    	<groupId>org.mnode.ical4j</groupId>
    	<artifactId>ical4j</artifactId>
    	<version>2.0.0</version>
	</dependency>
	
	<!-- GproUtils -->
	<dependency>
    	<groupId>org.jlobato.gpro</groupId>
    	<artifactId>gpro-utils</artifactId>
    	<version>${org.jlobato.gpro.version}</version>
	</dependency>
	
	<!-- GproMyBatis -->
	<dependency>
    	<groupId>org.jlobato.gpro</groupId>
    	<artifactId>gpro-mybatis</artifactId>
    	<version>${org.jlobato.gpro.mybatis.version}</version>
	</dependency>
	
	<!-- GproWebSession -->
	<dependency>
    	<groupId>org.jlobato.gpro</groupId>
    	<artifactId>gprowebsession</artifactId>
    	<version>${org.jlobato.gpro.version}</version>
	</dependency>
	
	<!--  jackson (json) -->
	<dependency>
    	<groupId>com.fasterxml.jackson.core</groupId>
    	<artifactId>jackson-core</artifactId>
    	<version>${com.fasterxml.jackson.version}</version>
	</dependency>
	<dependency>
    	<groupId>com.fasterxml.jackson.core</groupId>
    	<artifactId>jackson-databind</artifactId>
    	<version>${com.fasterxml.jackson.jacksondatabind.version}</version>
	</dependency>
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-annotations</artifactId>
	    <version>${com.fasterxml.jackson.version}</version>
	</dependency>
	
	<!-- javamelody-core -->
	<dependency>
		<groupId>net.bull.javamelody</groupId>
		<artifactId>javamelody-core</artifactId>
		<version>${net.bull.javamelody.version}</version>
	</dependency>
	
	<!-- BBCode -->
	<dependency>
		<groupId>com.inversoft</groupId>
		<artifactId>prime-transformer</artifactId>
		<version>2.1.4</version>
	</dependency>
	
	<!-- BeanUtils -->
	<dependency>
    	<groupId>commons-beanutils</groupId>
    	<artifactId>commons-beanutils</artifactId>
    	<version>1.9.4</version>
	</dependency>
	

  </dependencies>
  
  <build>
    <finalName>gprdata</finalName>
    <resources>
        <resource>
            <targetPath>.</targetPath>
            <directory>src/main/config</directory>
        </resource>
        <resource>
            <targetPath>.</targetPath>
            <directory>src/main/resources</directory>
        </resource>
    </resources>
    <plugins>
		<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.2.6.RELEASE</version>
		</plugin>
		<plugin>
	            <groupId>com.spotify</groupId>
	            <artifactId>dockerfile-maven-plugin</artifactId>
	            <version>1.4.9</version>
	            <configuration>
	                <repository>${docker.image.prefix}/${project.artifactId}</repository>
		            <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
		            <serverId>docker-hub</serverId>
		            <useMavenSettingsForAuth>true</useMavenSettingsForAuth>
         			<registryUrl>https://index.docker.io/v1/</registryUrl>
        	 		<forceTags>true</forceTags>
         			<imageTags>
           				<imageTag>${project.version}</imageTag>
         			</imageTags>
         			<resources>
           				<resource>
             				<targetPath>/</targetPath>
             				<directory>${project.build.directory}</directory>
             				<include>${project.build.finalName}.jar</include>
           				</resource>
         			</resources>
      				<buildArgs>
        				<JAR_FILE>target/${project.build.finalName}.jar</JAR_FILE>
      				</buildArgs>
	            </configuration>
	            <executions>
	         		<execution>
	           			<id>build-image</id>
	           			<phase>package</phase>
	           			<goals>
	             			<goal>build</goal>
	           			</goals>
	           			<configuration>
	          	   			<imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</imageName>
	          	   			<tag>${project.version}</tag>
	           			</configuration>
	         		</execution>
	         		<execution>
	           			<id>push-image</id>
	           			<phase>install</phase>
	           			<goals>
	             			<goal>push</goal>
	           			</goals>
	           			<configuration>
	          	   			<imageName>${docker.image.prefix}/${project.artifactId}:${project.version}</imageName>
	          	   			<tag>${project.version}</tag>
	           			</configuration>
	         		</execution>
	       		</executions>
        </plugin>
	</plugins>
  </build>
  
<!-- Propiedades generales del proyecto -->
  <properties>
  	<project.deploy.lib.directory>${project.build.directory}/../../deploy</project.deploy.lib.directory>
	<junit.version>4.13.1</junit.version>    
  	<org.jlobato.gpro.version>1.0.0.RELEASE</org.jlobato.gpro.version>
  	<org.jlobato.gpro.gprsheetparser.version>1.0.3.RELEASE</org.jlobato.gpro.gprsheetparser.version>
  	<org.jlobato.gproresults.version>1.2.0.RELEASE</org.jlobato.gproresults.version>  	
  	<org.jlobato.gpro.mybatis.version>1.2.0.0.RELEASE</org.jlobato.gpro.mybatis.version>  	
  	<org.springframework.version>6.0.0</org.springframework.version>
  	<org.springframework.web.version>6.0.0</org.springframework.web.version>
  	<org.springframework.security.version>6.0.0</org.springframework.security.version>
    <slf4j.version>1.7.1</slf4j.version>
    <log4j.version>2.17.1</log4j.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  	<com.fasterxml.jackson.version>2.12.6</com.fasterxml.jackson.version>
  	<com.fasterxml.jackson.jacksondatabind.version>2.13.4.1</com.fasterxml.jackson.jacksondatabind.version>
	<java.build.version>1.8</java.build.version>
	<java.source.version>1.8</java.source.version>
	<maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <failOnMissingWebXml>false</failOnMissingWebXml>
	<docker.image.prefix>yisasthemanuel</docker.image.prefix>
	<spring-cloud.version>Hoxton.SR1</spring-cloud.version>		
	<net.bull.javamelody.version>2.1.0</net.bull.javamelody.version>    
  </properties>
  
<!-- Generar el informe de release  -->
  <reporting>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-changes-plugin</artifactId>
        <version>2.12</version>
        <reportSets>
          <reportSet>
            <reports>
              <report>changes-report</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>  

<!-- Desarrolladores del proyecto -->
  <developers>
    <developer>
      <id>yisasthemanuel</id>
      <name>Jesús Manuel Pérez Lobato</name>
      <email>yisasthemanuel@gmail.com</email>
      <url>http://theyisasthemanuelprojectpage.com</url>
      <organization>La mía propia</organization>
      <organizationUrl>http://www.lamiapropia.com</organizationUrl>
      <roles>
        <role>architect</role>
        <role>developer</role>
        <role>deliveries boy</role>
      </roles>
      <timezone>Europe/Madrid</timezone>
    </developer>
  </developers> 
</project>
